# hellogtk

./: .gitignore  .tmuxp.yml  meson.build
data/: com.github.giacomo.hellogtk.appdata.xml  com.github.giacomoalbe.hellogtk.desktop.in
po/: LINGUAS  POTFILES  com.github.giacomoalbe.hellogtk.pot  en.po  it.po  meson.build
src/: Application.vala
